--- a/index.html
+++ b/index.html
@@ -893,7 +893,12 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{xxx}</code></pre>
+      <pre><code>@misc{zhong2023clot,
+        title={Let's Think Outside the Box: Exploring Leap-of-Thought in Large Language Models with Creative Humor Generation},
+        author={Zhong, Shanshan and Huang, Zhongzhan and Gao, Shanghua and Wen, Weushao and Lin, Liang and Zitnik, Marinka and Zhou, Pan},
+        booktitle={arxiv},
+        year={2023}
+      }</code></pre>
       <script type="text/javascript" id="clustrmaps"
         src="//clustrmaps.com/map_v2.js?d=8O_PQBlu4CNXBxYWh8KZ7MNdSLsAwP8Vdqw5h9ia-aI&cl=ffffff&w=a"></script>
     </div>
