--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/xxx/xxx" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/sail-sg/CLoT" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -893,12 +893,13 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{zhong2023clot,
-        title={Let's Think Outside the Box: Exploring Leap-of-Thought in Large Language Models with Creative Humor Generation},
-        author={Zhong, Shanshan and Huang, Zhongzhan and Gao, Shanghua and Wen, Weushao and Lin, Liang and Zitnik, Marinka and Zhou, Pan},
-        booktitle={arxiv},
-        year={2023}
-      }</code></pre>
+      <pre><code>
+@misc{zhong2023clot,
+  title={Let's Think Outside the Box: Exploring Leap-of-Thought in Large Language Models with Creative Humor Generation},
+  author={Zhong, Shanshan and Huang, Zhongzhan and Gao, Shanghua and Wen, Weushao and Lin, Liang and Zitnik, Marinka and Zhou, Pan},
+  booktitle={arxiv},
+  year={2023}
+}</code></pre>
       <script type="text/javascript" id="clustrmaps"
         src="//clustrmaps.com/map_v2.js?d=8O_PQBlu4CNXBxYWh8KZ7MNdSLsAwP8Vdqw5h9ia-aI&cl=ffffff&w=a"></script>
     </div>
