--- a/index.html
+++ b/index.html
@@ -900,8 +900,7 @@
   booktitle={arxiv},
   year={2023}
 }</code></pre>
-      <script type="text/javascript" id="clustrmaps"
-        src="//clustrmaps.com/map_v2.js?d=8O_PQBlu4CNXBxYWh8KZ7MNdSLsAwP8Vdqw5h9ia-aI&cl=ffffff&w=a"></script>
+      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=bGz-i05vJ4AaK_yxWnCTXpUpTC2n9AStAEC3fPN7iJE&cl=ffffff&w=a"></script>
     </div>
   </section>
 
