--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 function toggleLanguage11() {
                   var element = document.getElementById("textToToggle11");
                   if (element.innerHTML.trim() === "我以前一直以为自己是单身狗，直到我看到我儿子。") {
-                    element.innerHTML = "I used to think I was a single dog, until I laid eyes on my son.";
+                    element.innerHTML = "I used to think I was a \"single dog\", until I laid eyes on my son.";
                   } else {
                     element.innerHTML = "我以前一直以为自己是单身狗，直到我看到我儿子。";
                   }
@@ -294,7 +294,7 @@
               <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                 <div class="panel-body">
                   <p>
-                    The dog looks quite proud, and CLoT captions it with the sentiment: "I used to think I was a single dog, 
+                    The dog looks quite proud, and CLoT captions it with the sentiment: "I used to think I was a 'single dog', 
                     until I laid eyes on my son." This sentence includes two commonly used Chinses cultural
                     references: (1) "Single dog" (a term for people who are single), and (2) the trend, especially among
                     guys, of affectionately calling their close friends "son". The implied meaning of the sentense is
