--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
               <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                 <div class="panel-body">
                   <p>
-                    The man in the image has his hands open, as if blocking the seat to prevent someone from sitting
+                    This image is from Forrest Gump. The man in the image has his hands open, as if blocking the seat to prevent someone from sitting
                     down. At the same time, he turns his head to the left, seeming to say to the person on the left who
                     wants to sit in the chair, "Sorry, this spot's taken."
                   </p>
@@ -877,7 +877,7 @@
 
 
   <!-- Paper poster -->
-  <section class="hero is-small is-light">
+  <!-- <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="container">
         <h2 class="title" style="text-align: center;">Paper</h2>
@@ -887,14 +887,13 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
   <!--End paper poster -->
 
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>
-@misc{zhong2023clot,
+      <pre><code>@misc{zhong2023clot,
   title={Let's Think Outside the Box: Exploring Leap-of-Thought in Large Language Models with Creative Humor Generation},
   author={Zhong, Shanshan and Huang, Zhongzhan and Gao, Shanghua and Wen, Weushao and Lin, Liang and Zitnik, Marinka and Zhou, Pan},
   booktitle={arxiv},
