--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 function toggleLanguage11() {
                   var element = document.getElementById("textToToggle11");
                   if (element.innerHTML.trim() === "我以前一直以为自己是单身狗，直到我看到我儿子。") {
-                    element.innerHTML = "I used to think I was a \"single dog\", until I laid eyes on my son.";
+                    element.innerHTML = "I used to think I was a &quot;single dog&quot;, until I laid eyes on my son.";
                   } else {
                     element.innerHTML = "我以前一直以为自己是单身狗，直到我看到我儿子。";
                   }
