--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <div class="column has-text-centered">
               <h4 class="panel-title">
-                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Laugh levels may vary! Due to cultural differences and
+                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Humor levels may vary! Due to cultural differences and
                 individual tastes,
                 the humor generated here might hit differently for everyone. Embrace the diversity of funny and enjoy
                 the ride! 🤪
@@ -294,7 +294,8 @@
               <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                 <div class="panel-body">
                   <p>
-                    The dog looks quite proud, and CLoT captions it with the sentiment: "I used to think I was a 'single dog', 
+                    The dog looks quite proud, and CLoT captions it with the sentiment: "I used to think I was a 'single
+                    dog',
                     until I laid eyes on my son." This sentence includes two commonly used Chinses cultural
                     references: (1) "Single dog" (a term for people who are single), and (2) the trend, especially among
                     guys, of affectionately calling their close friends "son". The implied meaning of the sentense is
@@ -505,7 +506,8 @@
               <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                 <div class="panel-body">
                   <p>
-                    This image is from Forrest Gump. The man in the image has his hands open, as if blocking the seat to prevent someone from sitting
+                    This image is from Forrest Gump. The man in the image has his hands open, as if blocking the seat to
+                    prevent someone from sitting
                     down. At the same time, he turns his head to the left, seeming to say to the person on the left who
                     wants to sit in the chair, "Sorry, this spot's taken."
                   </p>
@@ -643,10 +645,9 @@
   </section>
   <!-- End image carousel -->
 
-
-  <section class="section">
+  <!-- Abstract. -->
+  <!-- <section class="section">
     <div class="container is-max-desktop">
-      <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3">Abstract</h2>
@@ -675,26 +676,21 @@
           </div>
         </div>
       </div>
-      <!--/ Abstract. -->
     </div>
-  </section>
+  </section> -->
+  <!--/ Abstract. -->
 
   <!-- Image carousel More Examples-->
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
         <h2 class="title is-3" style="text-align: center;">
-          Oogiri-style Multimodal Humor Generation by CLoT
+          More Oogiri-style Generation by CLoT
           <br>
         </h2>
         <h2 class="subtitle">
           <br>
-          <font color=#b76126>Oogiri-GO</font> contains three types of Oogiri games according to the input that can be
-          image, text, or both, and
-          are respectively called "<strong>Image to Text</strong>", "<strong>Text to Text</strong>", and
-          "<strong>Image&Text to Text</strong>" for brevity. Here, we
-          showcase CLoT's Oogiri-style multimodal humor generation in various types and languages. "@" denotes English
-          translations.
+          &nbsp;&nbsp; * "@" denotes English translations.
         </h2>
         <div id="carousel-demo" class="carousel results-carousel">
           <div class="item-4 " style="display: flex; align-items: center; justify-content: center; height: 75vh;">
@@ -899,7 +895,8 @@
   booktitle={arxiv},
   year={2023}
 }</code></pre>
-      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=bGz-i05vJ4AaK_yxWnCTXpUpTC2n9AStAEC3fPN7iJE&cl=ffffff&w=a"></script>
+      <script type="text/javascript" id="clustrmaps"
+        src="//clustrmaps.com/map_v2.js?d=bGz-i05vJ4AaK_yxWnCTXpUpTC2n9AStAEC3fPN7iJE&cl=ffffff&w=a"></script>
     </div>
   </section>
 
