--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
+        <h2 class="title is-3" style="text-align: center;">
+          Preview
+        </h2>
+        <br>
         <h4 class="panel-title">
           &nbsp;&nbsp; * Click the texts under images to toggle language or get explanations.
         </h4>
@@ -685,7 +689,7 @@
     <div class="hero-body">
       <div class="container">
         <h2 class="title is-3" style="text-align: center;">
-          More Oogiri-style Generation by CLoT
+          More Responses of Oogiri Game by CLoT
           <br>
         </h2>
         <h2 class="subtitle">
