--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           Preview
         </h2>
         <br>
-        <h4 class="panel-title">
+        <h4 class="panel-title" style="text-align: center;">
           &nbsp;&nbsp; * Click the texts under images to toggle language or get explanations.
         </h4>
         <br>
@@ -692,7 +692,7 @@
           More Responses of Oogiri Game by CLoT
           <br>
         </h2>
-        <h2 class="subtitle">
+        <h2 class="subtitle" style="text-align: center;">
           <br>
           &nbsp;&nbsp; * "@" denotes English translations.
         </h2>
