--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
 
             <div class="column has-text-centered">
               <h4 class="panel-title">
-                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Humor levels may vary! Due to cultural differences and
-                individual tastes,
-                the humor generated here might hit differently for everyone. Embrace the diversity of funny and enjoy
+                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Sense of humor may vary from person to person! Due to cultural differences and
+                individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of funny and enjoy
                 the ride! 🤪
               </h4>
             </div>
