--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <div class="column has-text-centered">
               <h4 class="panel-title">
-                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Sense of humor may vary from person to person! Due to cultural differences and
+                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Humor is subjective! Due to cultural differences and
                 individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of funny and enjoy
                 the ride! 🤪
               </h4>
