--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
 
             <div class="column has-text-centered">
               <h4 class="panel-title">
-                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Humor is subjective! Due to cultural differences and
-                individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of funny and enjoy
-                the ride! 🤪
+                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Humor is subjective! Due to cultural differences and individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of funny and enjoy the ride! 🤪
               </h4>
             </div>
           </div>
@@ -133,7 +131,6 @@
         <h2 class="title is-3" style="text-align: center;">
           Preview
         </h2>
-        <br>
         <h4 class="panel-title" style="text-align: center;">
           &nbsp;&nbsp; * Click the texts under images to toggle language or get explanations.
         </h4>
@@ -689,10 +686,8 @@
       <div class="container">
         <h2 class="title is-3" style="text-align: center;">
           More Responses of Oogiri Game by CLoT
-          <br>
         </h2>
         <h2 class="subtitle" style="text-align: center;">
-          <br>
           &nbsp;&nbsp; * "@" denotes English translations.
         </h2>
         <div id="carousel-demo" class="carousel results-carousel">
