--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
                 </span>
               </div>
             </div>
+            
+            <div class="column has-text-centered">
+              <h4 class="panel-title">
+                To explore the Leaf-of-Thought (LoT) ability of LLM, we consider utilizing Oogiri (大喜利, a traditional Japanese comedy game), which is a creative humor generation task that challenges players to think outside the box in response to multimodal information.
+                <br>
+                The Oogiri game provides an ideal platform to investigating LLM's LoT ability. However, the proposed CLoT is not limited to humor generation, and it can also benefit other creative tasks. See our paper for more details.
+              </h4>
+            </div>
 
             <div class="column has-text-centered">
               <h4 class="panel-title">
