--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered" style="justify-content: center; height: 100vh;">
-            <img src="static/images/CLoT.png" style="max-width: 50%;" />
+            <img src="static/images/CLoT.png" style="max-width: 30%;" />
             <h1 class="title is-1 publication-title">Let's Think Outside the Box !</h1>
             <h2 class="title is-2 publication-title">Exploring Leap-of-Thought in Large Language Models with Creative
               Humor Generation</h2>
@@ -111,20 +111,29 @@
                 </span>
               </div>
             </div>
-            
-            <div class="column has-text-centered">
-              <h4 class="panel-title">
-                To explore the Leaf-of-Thought (LoT) ability of LLM, we consider utilizing Oogiri (大喜利, a traditional Japanese comedy game), which is a creative humor generation task that challenges players to think outside the box in response to multimodal information.
-                <br>
-                The Oogiri game provides an ideal platform to investigating LLM's LoT ability. However, the proposed CLoT is not limited to humor generation, and it can also benefit other creative tasks. See our paper for more details.
+
+            <div class="column">
+              <h4 class="panel-title has-text-justified">
+                <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font> ability of LLM, we consider
+                utilizing Oogiri (<a href="/index.html"><b class="panel-heading-click">大喜利</b></a>, a traditional
+                Japanese comedy game), which is a creative humor generation task that challenges players to think
+                outside the box in response to multimodal information.
+              </h4>
+              <br>
+              <h4 class="panel-title has-text-justified">
+                <i class="fa fa-bullhorn"></i>&nbsp; The Oogiri game provides an ideal platform to investigating LLM's
+                LoT ability. However, the proposed
+                CLoT is not limited to humor generation, and it can also benefit other creative tasks. See our paper for
+                more details.
+              </h4>
+              <br>
+              <h4 class="panel-title has-text-justified">
+                <i class="fa fa-bullhorn"></i>&nbsp; Humor is subjective! Due to cultural differences and
+                individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of
+                funny and enjoy the ride! 🤪
               </h4>
             </div>
 
-            <div class="column has-text-centered">
-              <h4 class="panel-title">
-                <i class="fa fa-bullhorn"></i>&nbsp;&nbsp; Humor is subjective! Due to cultural differences and individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of funny and enjoy the ride! 🤪
-              </h4>
-            </div>
           </div>
         </div>
       </div>
@@ -136,10 +145,10 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
-        <h2 class="title is-3" style="text-align: center;">
+        <h2 class="title is-3 has-text-centered">
           Preview
         </h2>
-        <h4 class="panel-title" style="text-align: center;">
+        <h4 class="panel-title has-text-centered">
           &nbsp;&nbsp; * Click the texts under images to toggle language or get explanations.
         </h4>
         <br>
@@ -692,10 +701,10 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
-        <h2 class="title is-3" style="text-align: center;">
+        <h2 class="title is-3 has-text-centered">
           More Responses of Oogiri Game by CLoT
         </h2>
-        <h2 class="subtitle" style="text-align: center;">
+        <h2 class="subtitle has-text-centered">
           &nbsp;&nbsp; * "@" denotes English translations.
         </h2>
         <div id="carousel-demo" class="carousel results-carousel">
@@ -739,7 +748,7 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container">
-        <h2 class="title is-3" style="text-align: center;">
+        <h2 class="title is-3 has-text-centered">
           Diversity Responses of Oogiri Game by CLoT
         </h2>
         <br>
