--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
             <div class="column">
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font> ability of LLM, we consider
-                utilizing Oogiri (<a href="/index.html"><b class="panel-heading-click">大喜利</b></a>, a traditional
-                Japanese comedy game), which is a creative humor generation task that challenges players to think
+                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1TG4y1g7rP"><b class="panel-heading-click">大喜利</b></a>, a traditional
+                Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that challenges players to think
                 outside the box in response to multimodal information.
               </h4>
               <br>
               <h4 class="panel-title has-text-justified">
-                <i class="fa fa-bullhorn"></i>&nbsp; The Oogiri game provides an ideal platform to investigating LLM's
-                LoT ability. However, the proposed
-                CLoT is not limited to humor generation, and it can also benefit other creative tasks. See our paper for
+                <i class="fa fa-bullhorn"></i>&nbsp; The <font color=#c56724>Oogiri game</font> provides an ideal platform to investigating LLM's
+                LoT ability. However, the proposed CLoT is not limited to humor generation, and it can also benefit 
+                <font color=#c56724>other creative tasks</font>. See our <a href="http://xxx"><b class="panel-heading-click">paper</b></a> for
                 more details.
               </h4>
               <br>
               <h4 class="panel-title has-text-justified">
-                <i class="fa fa-bullhorn"></i>&nbsp; Humor is subjective! Due to cultural differences and
+                <i class="fa fa-bullhorn"></i>&nbsp; <font color=#e60f0c>Humor is subjective!</font> Due to cultural differences and
                 individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of
                 funny and enjoy the ride! 🤪
               </h4>
