--- a/index.html
+++ b/index.html
@@ -114,21 +114,27 @@
 
             <div class="column">
               <h4 class="panel-title has-text-justified">
-                <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font> ability of LLM, we consider
-                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1TG4y1g7rP"><b class="panel-heading-click">大喜利</b></a>, a traditional
-                Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that challenges players to think
+                <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font>
+                <img src="static/images/CLoT.png" style="max-width: 3%;" /> ability of LLM, we consider
+                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1TG4y1g7rP"><b
+                    class="panel-heading-click">大喜利</b></a>, a traditional
+                Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that
+                challenges players to think
                 outside the box in response to multimodal information.
               </h4>
               <br>
               <h4 class="panel-title has-text-justified">
-                <i class="fa fa-bullhorn"></i>&nbsp; The <font color=#c56724>Oogiri game</font> provides an ideal platform to investigating LLM's
-                LoT ability. However, the proposed CLoT is not limited to humor generation, and it can also benefit 
-                <font color=#c56724>other creative tasks</font>. See our <a href="http://xxx"><b class="panel-heading-click">paper</b></a> for
+                <i class="fa fa-bullhorn"></i>&nbsp; The <font color=#c56724>Oogiri game</font> provides an ideal
+                platform to investigating LLM's
+                LoT ability. However, the proposed CLoT is not limited to humor generation, and it can also benefit
+                <font color=#c56724>other creative tasks</font> 🤗. See our <a href="http://xxx"><b
+                    class="panel-heading-click">paper</b></a> for
                 more details.
               </h4>
               <br>
               <h4 class="panel-title has-text-justified">
-                <i class="fa fa-bullhorn"></i>&nbsp; <font color=#e60f0c>Humor is subjective!</font> Due to cultural differences and
+                <i class="fa fa-bullhorn"></i>&nbsp; <font color=#e60f0c>Humor is subjective!</font> 🤣 Due to cultural
+                differences and
                 individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of
                 funny and enjoy the ride! 🤪
               </h4>
@@ -696,7 +702,6 @@
     </div>
   </section> -->
   <!--/ Abstract. -->
-
   <!-- Image carousel More Examples-->
   <section class="hero is-light is-small">
     <div class="hero-body">
@@ -704,9 +709,9 @@
         <h2 class="title is-3 has-text-centered">
           More Responses of Oogiri Game by CLoT
         </h2>
-        <h2 class="subtitle has-text-centered">
+        <h4 class="panel-title has-text-centered">
           &nbsp;&nbsp; * "@" denotes English translations.
-        </h2>
+        </h4>
         <div id="carousel-demo" class="carousel results-carousel">
           <div class="item-3" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
             <img src="static/images/example3.png" class="interpolation-image" style="width:800px;"
