--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font>
                 <img src="static/images/CLoT.png" style="max-width: 3%;" /> ability of LLM, we consider
-                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1Z14y1E7Wo"><b
+                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1TG4y1g7rP"><b
                     class="panel-heading-click">大喜利</b></a>, a traditional
                 Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that
                 challenges players to think
