--- a/index.html
+++ b/index.html
@@ -115,19 +115,18 @@
             <div class="column">
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font>
-                <img src="static/images/CLoT.png" style="max-width: 3%;" /> ability of LLM, we consider
+                 ability of LLM, we consider
                 utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1TG4y1g7rP"><b
                     class="panel-heading-click">大喜利</b></a>, a traditional
                 Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that
-                challenges players to think
-                outside the box in response to multimodal information.
+                challenges players to <font color=#c56724>think outside the box</font> <img src="static/images/CLoT.png" style="max-width: 3%;" /> in response to multimodal information.
               </h4>
               <br>
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; The <font color=#c56724>Oogiri game</font> provides an ideal
                 platform to investigating LLM's
-                LoT ability. However, the proposed CLoT is not limited to humor generation, and it can also benefit
-                <font color=#c56724>other creative tasks</font> 🤗. See our <a href="http://xxx"><b
+                LoT ability. However, the proposed CLoT is <font color=#c56724>not limited to humor generation</font>, and it can also benefit
+                other creative tasks 🤗. See our <a href="http://xxx"><b
                     class="panel-heading-click">paper</b></a> for
                 more details.
               </h4>
@@ -756,7 +755,9 @@
         <h2 class="title is-3 has-text-centered">
           Diversity Responses of Oogiri Game by CLoT
         </h2>
-        <br>
+        <h4 class="panel-title has-text-centered">
+          <i class="fa fa-bullhorn"></i>&nbsp; "@" denotes English translations.
+        </h4>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-chair-tp">
             <img src="static/images/cat.jpg" class="interpolation-image" style="width:430px; height:330px"
