--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font>
                  ability of LLM, we consider
-                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1TG4y1g7rP"><b
+                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1jt4y1g7ob"><b
                     class="panel-heading-click">大喜利</b></a>, a traditional
                 Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that
                 challenges players to <font color=#c56724>think outside the box</font> <img src="static/images/CLoT.png" style="max-width: 3%;" /> in response to multimodal information.
@@ -758,9 +758,10 @@
         <h4 class="panel-title has-text-centered">
           <i class="fa fa-bullhorn"></i>&nbsp; "@" denotes English translations.
         </h4>
+        <br>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-chair-tp">
-            <img src="static/images/cat.jpg" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/cat.jpg" class="interpolation-image" style="width:430px; height:400px"
               alt="Interpolate start reference image." />
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -792,7 +793,7 @@
             </div>
           </div>
           <div class="item item-chair-tp">
-            <img src="static/images/eagle.jpg" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/eagle.jpg" class="interpolation-image" style="width:430px; height:400px"
               alt="Interpolate start reference image." />
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -824,7 +825,7 @@
             </div>
           </div>
           <div class="item item-chair-tp">
-            <img src="static/images/cat2.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/cat2.png" class="interpolation-image" style="width:430px; height:400px"
               alt="Interpolate start reference image." />
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -855,7 +856,7 @@
             </div>
           </div>
           <div class="item item-chair-tp">
-            <img src="static/images/dog.jpg" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/dog.jpg" class="interpolation-image" style="width:430px; height:400px"
               alt="Interpolate start reference image." />
             <div class="panel panel-default">
               <div class="panel-heading">
