--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font>
                  ability of LLM, we consider
-                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1jt4y1g7ob"><b
+                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1jt4y1g7ob/?p=13"><b
                     class="panel-heading-click">大喜利</b></a>, a traditional
                 Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that
                 challenges players to <font color=#c56724>think outside the box</font> <img src="static/images/CLoT.png" style="max-width: 3%;" /> in response to multimodal information.
