--- a/index.html
+++ b/index.html
@@ -115,19 +115,21 @@
             <div class="column">
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font>
-                 ability of LLM, we consider
-                utilizing <font color=#c56724>Oogiri</font> (<a href="https://www.bilibili.com/video/BV1jt4y1g7ob?p=13"><b
-                    class="panel-heading-click">大喜利</b></a>, a traditional
+                ability of LLM, we consider
+                utilizing <font color=#c56724>Oogiri</font> (<a
+                  href="https://www.bilibili.com/video/BV1jt4y1g7ob?p=13"><b class="panel-heading-click">大喜利</b></a>, a
+                traditional
                 Japanese comedy game), which is a <font color=#c56724>creative humor generation task</font> that
-                challenges players to <font color=#c56724>think outside the box</font> <img src="static/images/CLoT.png" style="max-width: 3%;" /> in response to multimodal information.
+                challenges players to <font color=#c56724>think outside the box</font> <img src="static/images/CLoT.png"
+                  style="max-width: 3%;" /> in response to multimodal information.
               </h4>
               <br>
               <h4 class="panel-title has-text-justified">
                 <i class="fa fa-bullhorn"></i>&nbsp; The <font color=#c56724>Oogiri game</font> provides an ideal
                 platform to investigating LLM's
-                LoT ability. However, the proposed CLoT is <font color=#c56724>not limited to humor generation</font>, and it can also benefit
-                other creative tasks 🤗. See our <a href="http://xxx"><b
-                    class="panel-heading-click">paper</b></a> for
+                LoT ability. However, the proposed CLoT is <font color=#c56724>not limited to humor generation</font>,
+                and it can also benefit
+                other creative tasks 🤗. See our <a href="http://xxx"><b class="panel-heading-click">paper</b></a> for
                 more details.
               </h4>
               <br>
@@ -710,7 +712,21 @@
         <h4 class="panel-title has-text-centered">
           <i class="fa fa-bullhorn"></i>&nbsp; "@" denotes English translations.
         </h4>
+        <br>
         <div id="carousel-demo" class="carousel results-carousel">
+          <div class="item-0" style="align-items: center; justify-content: center; height: 75vh;">
+            <img src="static/images/example0.png" class="interpolation-image" style="width:900px;"
+              alt="Interpolate start reference image." />
+            <br>
+            <h4 class="panel-title has-text-justified">
+              Comparison between (multimodal) large language model (red) and its CLoT-integrated version (blue) for
+              Oogiri-style multimodal humor generation. According to the model input that can be image, text or both,
+              there are three Oogiri tasks, "Image&Text to Text (IT2T)", "Image to Text (I2T)", and "Text to Text
+              (T2T)”, where text can be English (EN), Chinese (CN), and Japanese (JP). The baseline LLM is Qwen-VL.
+              While humor is subjective, these examples demonstrate CLoT's leap-of-thought capacity of using excellent
+              creative thinking to produce high-quality humor responses. See more responses of Oogiri game by CLoT in next carousel.
+            </h4>
+          </div>
           <div class="item-3" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
             <img src="static/images/example3.png" class="interpolation-image" style="width:700px;"
               alt="Interpolate start reference image." />
