--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="publication-links">
                 <!-- Arxiv Link. -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/xxx" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2312.02439" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fa fa-book"></i>
                     </span>
@@ -724,7 +724,7 @@
               there are three Oogiri tasks, "Image&Text to Text (IT2T)", "Image to Text (I2T)", and "Text to Text
               (T2T)”, where text can be English (EN), Chinese (CN), and Japanese (JP). The baseline LLM is Qwen-VL.
               While humor is subjective, these examples demonstrate CLoT's leap-of-thought capacity of using excellent
-              creative thinking to produce high-quality humor responses. See more responses of Oogiri game by CLoT in next carousel.
+              creative thinking to produce high-quality humor responses. See more responses of Oogiri game by CLoT in next carousels.
             </h4>
           </div>
           <div class="item-3" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
