--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 platform to investigating LLM's
                 LoT ability. However, the proposed CLoT is <font color=#c56724>not limited to humor generation</font>,
                 and it can also benefit
-                other creative tasks 🤗. See our <a href="http://xxx"><b class="panel-heading-click">paper</b></a> for
+                other creative tasks 🤗. See our <a href="https://arxiv.org/pdf/2312.02439.pdf"><b class="panel-heading-click">paper</b></a> for
                 more details.
               </h4>
               <br>
