--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
       <pre><code>@misc{zhong2023clot,
   title={Let's Think Outside the Box: Exploring Leap-of-Thought in Large Language Models with Creative Humor Generation},
   author={Zhong, Shanshan and Huang, Zhongzhan and Gao, Shanghua and Wen, Weushao and Lin, Liang and Zitnik, Marinka and Zhou, Pan},
-  booktitle={arxiv},
+  journal={arXiv preprint arXiv:2312.02439},
   year={2023}
 }</code></pre>
       <script type="text/javascript" id="clustrmaps"
