--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
         </h4>
         <br>
         <div id="carousel-demo" class="carousel results-carousel">
-          <div class="item-0" style="align-items: center; justify-content: center; height: 75vh;">
+          <!-- <div class="item-0" style="align-items: center; justify-content: center; height: 75vh;">
             <img src="static/images/example0.png" class="interpolation-image" style="width:900px;"
               alt="Interpolate start reference image." />
             <br>
@@ -726,7 +726,7 @@
               While humor is subjective, these examples demonstrate CLoT's leap-of-thought capacity of using excellent
               creative thinking to produce high-quality humor responses. See more responses of Oogiri game by CLoT in next carousels.
             </h4>
-          </div>
+          </div> -->
           <div class="item-3" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
             <img src="static/images/example3.png" class="interpolation-image" style="width:700px;"
               alt="Interpolate start reference image." />
