--- a/index.html
+++ b/index.html
@@ -603,8 +603,8 @@
                 there are three Oogiri tasks, "Image&Text to Text (IT2T)", "Image to Text (I2T)", and "Text to Text
                 (T2T)", where text can be English (EN), Chinese (CN), and Japanese (JP). The baseline LLM is Qwen-VL.
                 While humor is subjective, these examples demonstrate CLoT's leap-of-thought capacity of using excellent
-                creative thinking to produce high-quality humor responses. See more responses of Oogiri game by CLoT in
-                next carousels.
+                creative thinking to produce high-quality humor responses. Swipe to the next page of the carousel to see 
+                more responses of Oogiri game by CLoT.
               </p>
             </div>
           </div>
